manifest/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: dgw
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
